SHIT BEST BE WORKING NOW

--- a/assets/gry.css
+++ b/assets/gry.css
@@ -1,6 +1,6 @@
 body {
   background-color: #000000;
-  background-image: url("/assets/lion-wp.png");
+  background-image: url("/lionsite/assets/lion-wp.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center; }
