For some reason the image_path helper is appending 'lionsite'...

--- a/_assets/css/gry.scss
+++ b/_assets/css/gry.scss
@@ -1,6 +1,6 @@
 body{
     background-color: #000000;
-    background-image: url(image_path("lion-wp"));
+    background-image: url(asset_path("lion-wp"));
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
