--- a/_assets/css/gry.scss
+++ b/_assets/css/gry.scss
@@ -4,6 +4,9 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
+    background-attachment: fixed;
+    margin: 0;
+    padding: 0;
 }
 
 #logo {
@@ -14,10 +17,10 @@ body{
     border-radius: 100%;
     border: 3px outset #d92b4c;
     position: relative;
-    z-index: 0;
     display: block;
-    margin: 0 auto;
-    margin-top: 30px;
+    margin: 30px auto;
+
+
     overflow: hidden;
 }
 
@@ -29,49 +32,39 @@ body{
     background-color: #74192a;
     width: 500px;
     height: auto;
-    top: 30px;
-    position: relative;
     color: #E0E0E0;
-    z-index: 1;
     margin: 0 auto;
 }
 
 ul.sections {
     padding: 0;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    margin-top: 60px;
+    margin: 0;
+    list-style: none;
+    overflow: hidden;
 
-    list-style-type: none;
 }
 
 ul.sections > li {
-    position:relative;
-    padding-right: 10px;
-    display: inline-block;
-
-
+    float: left;
+    width: 20%;
+    height: 80px;
+    background-color: #d9d9d9;
+    padding: 15px 15px;
 }
 
 ul.sections > li > a {
-    padding:12px;
+
     font-size: 16px;
     color: black;
     display:block;
-    background-color: #d9d9d9;
-    border-radius: 4px;
+    text-align: center;
+    text-decoration: none;
 
-}
-
-.content {
-    max-width: 960px;
-    margin: auto;
-    background: transparent;
-    padding: 10px;
 }
 
 #sections-area {
-
+    display: block;
+    width: 100%;
+    min-width: 650px;
+    float: left;
 }
