--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>lionsite</title>
+    {% css bulma %}
     {% css gry %}
-
 </head>
 <body>
     {{ content }}
