Updated and finished main page layout, added post layout and still working on it

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>lionsite</title>
     {% css bulma %}
-    {% css gry %}
+    {% css layouts/gry %}
 </head>
 <body>
     {{ content }}
