--- a/_assets/css/layouts/gry.scss
+++ b/_assets/css/layouts/gry.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Special+Elite');
 @import url('https://fonts.googleapis.com/css?family=Coming+Soon');
+@import url('https://fonts.googleapis.com/css?family=Ubuntu');
 
 html {
     overflow: hidden;
@@ -85,23 +86,27 @@ a{
         left: 5px;
         font-size: 500%;
     }
+    div.header-loogo{
+        img {
+            width: 25%;
+            height: 25%;
+        }
+    }
 }
 
 .item-container {
-    border: solid 5px #cf9c30;
-    background-color: #cf9c30;
-    background-image: url(asset-path("posts-bg"));
+    border: solid 5px #ccaa66;
+    background-color: #e6d5b3;
+    // background-image: url(asset-path("posts-bg"));
     width: 100%;
     height: 100%;
     margin-top: 1%;
     padding: 20px;
     border-radius: 5%;
+    font-family: 'Ubuntu', sans-serif;
     span.title {
         font-family: 'Special Elite';
         font-size: 300%;
-    }
-    p {
-
     }
     hr {
         background-color: #993300;
