--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>lionsite</title>
+    <title></title>
     {% css bulma %}
     {% css layouts/gry %}
 </head>
